# mastering-api-architecture

./: README.org  book-notes.org
tinker/: pyproject.toml
tinker/data/: generate-db.py
tinker/tests/: test_contracts.py
tinker/tinker/: app.py  client.py  gql.py  market_data.db  market_data.proto  market_data_pb2.py  market_data_pb2_grpc.py  models.py  server.py
